2002-08-28  Nicolas Burrus  <nes@epita.fr>

	* src/modem.c, include/modem.h: Fix echo problem. Add modem_readline.

2002-08-28  Laurent Carlier <lordheavy@infonie.fr>
	* src/options.c, include/option.h : check for general config
	file and personnal file ( parse_config() ).
	* src/main.c : use parse_config() instead of parse_config_file(),
	see above.

2002-08-27  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/options.c: Include config.h.
	* src/linux/tun.c, src/openbsd/tun.c, src/freebsd/tun.c: Likewise.
	* configure.ac: Ask config.h.

2002-08-26  Nicolas Burrus  <nes@lrde.epita.fr>

	* src/linux/tun.c: Remove warning.
	* src/p30data.c: Likewise.
	* src/main.c: Add exit on config_set failure.
	* configure.ac, Makefile.am, config/Makefile.am, include/Makefile.am, 
	src/Makefile.am, src/linux/Makefile.am, src/openbsd/Makefile.am, 
	src/freebsd/Makefile.am: New files.