@@ -124,6 +124,7 @@ prot30_send_ip ()
 {
   char *data;
   size_t data_size;
+  int offset;
   struct short_ip_t small;
   struct long_ip_t big;
 
@@ -131,6 +132,17 @@ prot30_send_ip ()
     {
       if (data_size > 0x7f)
         {
+	offset=0;
+	while(data_size-offset>MAX_PACKET_SIZE-AOL_DATA_OFFSET-3)
+	big.ipnum=ipnum;
+	big.len=data_size & LONG_IP_MASK;
+	memcpy(big.ip_data,data,data_size);
+        }
+      else
+        {
+	small.ipnum=ipnum;
+	small.len=data_size;
+	memcpy(small.ip_data,data,data_size);
         }
     }
 
